--- a/happinessrating.ipynb
+++ b/happinessrating.ipynb
@@ -3,24 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Library"
+    "#Library\n",
+    "##"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Data Prepare"
@@ -28,8 +21,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "happiness-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
